package app.mosia.nexus.application.service.session

import app.mosia.nexus.application.dto.request.session.CreateSessionRequest
import app.mosia.nexus.application.dto.response.session.SessionResponse
import app.mosia.nexus.application.service.device.DeviceServiceLive
import zio.*
import app.mosia.nexus.application.util.EnvContext
import app.mosia.nexus.domain.event.SessionEvent
import app.mosia.nexus.domain.event.SessionEvent.{SessionCreated, SessionStarted, SessionStopped}
import app.mosia.nexus.domain.model.common.Position3D
import app.mosia.nexus.domain.model.project.ProjectId
import app.mosia.nexus.domain.model.session.{NeuroSession, SessionId, SessionMetrics, SessionStatus}
import app.mosia.nexus.domain.model.simulation.SimulationId
import app.mosia.nexus.domain.model.user.UserId
import app.mosia.nexus.domain.repository.{DeviceRepository, SessionRepository}
import app.mosia.nexus.domain.service.ResourceAllocationService
import app.mosia.nexus.infra.config.DeviceServiceConfig
import app.mosia.nexus.infra.grpc.neuro.NeuroGrpcClient
import app.mosia.nexus.infra.messaging.event.DomainEventPublisher

import java.time.Instant
import java.util.UUID

/** 会话管理应用服务 职责：协调 Domain、Repository 和外部服务（Neuro gRPC） */
final class SessionServiceLive(
  sessionRepository: SessionRepository,
) extends SessionService:
  /** 创建会话（完整流程） */
  override def createSession(
    userId: UserId,
    simulationId: SimulationId,
    request: CreateSessionRequest,
  ): Task[SessionResponse] = ???

  /** 启动会话 */
  override def startSession(sessionId: SessionId): Task[SessionResponse] = ???

  /** 停止会话 */
  override def stopSession(sessionId: SessionId, reason: String = "User requested"): Task[SessionResponse] = ???

  /** 获取会话详情 */
  override def getSession(sessionId: SessionId): Task[Option[SessionResponse]] = ???

  /** 列出用户的所有会话 */
  override def listUserSessions(userId: UserId, projectId: ProjectId, limit: Int = 100): Task[List[SessionResponse]] =
    ???

  /** 更新会话指标（由后台任务定期调用） */
  override def syncSessionMetrics(sessionId: SessionId): Task[Unit] = ???

object SessionServiceLive:
  val live: ZLayer[SessionRepository, Nothing, SessionService] =
    ZLayer.fromFunction(new SessionServiceLive(_))
